--- a/docs/main.tex
+++ b/docs/main.tex
@@ -120,7 +120,7 @@
 
 \title{Ling 411 - Fall 2024}
 \author{Ümit Atlamaz}
-\date{2024-11-24}
+\date{2024-11-25}
 
 \begin{document}
 \maketitle
@@ -3157,7 +3157,7 @@ One final useful function is the \texttt{filter()} function. It allows you to fi
 
 \chapter{Plotting}\label{plotting-1}
 
-(24 November, 2024, 19:32)
+(25 November, 2024, 12:28)
 
 \section{The basics of ggplot2}\label{the-basics-of-ggplot2}
 
@@ -5650,6 +5650,477 @@ AIC lower is better.
 \end{Highlighting}
 \end{Shaded}
 
+\chapter{Linear \& Non-Linear Transformations}\label{linear-non-linear-transformations}
+
+\section{Linear Transformations}\label{linear-transformations}
+
+A \textbf{linear transformation} of a value is addition, subtraction, multiplication, or division with a constant value. Consider the following data:
+
+\begin{itemize}
+\tightlist
+\item
+  {[}2, 4, 6, 8{]}
+\end{itemize}
+
+Each of the number on the right is 2 more than the number on the left. Adding 1 to each of the values is a linear transformation of this data.
+
+\begin{itemize}
+\tightlist
+\item
+  {[}3, 5, 7, 9{]}
+\end{itemize}
+
+While the numbers themselves change, the relationship among them does not.
+
+Linear transformations are especially useful in describing data at a level of measurement that is useful to you. For example, the following descriptions are equal and they are linear transformations of each other.
+
+\begin{longtable}[]{@{}lll@{}}
+\toprule\noalign{}
+\textbf{Measured Value} & \textbf{Metric 1} & \textbf{Metric 2} \\
+\midrule\noalign{}
+\endhead
+\bottomrule\noalign{}
+\endlastfoot
+Distance & 700m & 0.7km \\
+Time & 2100ms & 2.1s \\
+\end{longtable}
+
+The crucial point in linear transformations is that they won't change the relationship among your data point and thus won't impact your models significantly. There are many different types of linear transformations. For our purposes we will focus on two linear transformations \textbf{centering} and \textbf{standardizing}.
+
+\subsection{Centering}\label{centering}
+
+Let us consider one of our previous examples.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\FunctionTok{library}\NormalTok{(tidyverse)}
+\FunctionTok{library}\NormalTok{(ggrepel)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{freq\_data }\OtherTok{\textless{}{-}} \FunctionTok{read\_csv}\NormalTok{(}\StringTok{"/Users/umit/ling\_411/data/log10ELP\_frequency.csv"}\NormalTok{)}
+
+\FunctionTok{ggplot}\NormalTok{(freq\_data, }\FunctionTok{aes}\NormalTok{(}\AttributeTok{x=}\NormalTok{log10freq, }\AttributeTok{y=}\NormalTok{RT)) }\SpecialCharTok{+}
+  \FunctionTok{scale\_x\_continuous}\NormalTok{(}\AttributeTok{limits =} \FunctionTok{c}\NormalTok{(}\DecValTok{0}\NormalTok{,}\DecValTok{5}\NormalTok{)) }\SpecialCharTok{+}
+  \FunctionTok{geom\_text\_repel}\NormalTok{(}\FunctionTok{aes}\NormalTok{(}\AttributeTok{label =}\NormalTok{ Word)) }\SpecialCharTok{+}
+  \FunctionTok{geom\_point}\NormalTok{()}\SpecialCharTok{+}
+  \FunctionTok{geom\_smooth}\NormalTok{(}\AttributeTok{method=}\StringTok{"lm"}\NormalTok{,}\AttributeTok{se=}\NormalTok{F, }\AttributeTok{fullrange=}\ConstantTok{TRUE}\NormalTok{)}\SpecialCharTok{+}
+  \FunctionTok{geom\_vline}\NormalTok{(}\AttributeTok{xintercept =} \DecValTok{0}\NormalTok{, }\AttributeTok{linetype =} \StringTok{"dashed"}\NormalTok{)}\SpecialCharTok{+}
+  \FunctionTok{geom\_label}\NormalTok{(}\AttributeTok{data=}\ConstantTok{NULL}\NormalTok{, }\FunctionTok{aes}\NormalTok{(}\AttributeTok{x=}\DecValTok{0}\NormalTok{, }\AttributeTok{y=} \DecValTok{870}\NormalTok{, }\AttributeTok{label=}\StringTok{"870"}\NormalTok{))}
+\end{Highlighting}
+\end{Shaded}
+
+\includegraphics{main_files/figure-latex/unnamed-chunk-225-1.pdf}
+
+Overall, our model does a decent job in showing us that there is a trend in our data. As the frequency of a word increases, reaction time decreases. However, the model also makes some hard to interpret prediction. Our model predicts that when the frequency of a word is 0, RT is expected to be 870. But that's kinda odd. What does it mean for a word to have 0 frequency. If a word has 0 frequency, does it even exist?
+
+At this point, we can step back and ask ourselves a question regarding the \textbf{intercept}. When we defined the intercept, we defined it as the value y takes when x is 0. We mentioned that this was the way to define a line mathematically. But why x=0?
+
+Maybe setting the intercept as the value y takes when x=0 is mathematically meaningful. We can assume that x=0 is the \textbf{center} of the positive and negative integers both of which go to infinity. However, our data are usually finite and their center is usually not 0. We have talked about various measures of \textbf{central tendency} to identify the center of our data (e.g.~mean, median, mode). How about we take the \textbf{mean} as the center of our data. In other words, how about we take the mean to be our x=0 point? This is called \textbf{centering}.
+
+When you \textbf{center} your data, your intercept becomes the value y assumes when x = mean(x). Thus, everything is interpreted relative to the mean. In other words, instead of measuring the distance from the absolute 0, we measure the distance from the mean.
+
+\textbf{To center a predictor variable}, we subtract the mean from each of the predictor variables. Let us center the log frequency data and plot it again.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{centered\_freq\_data }\OtherTok{\textless{}{-}} \FunctionTok{mutate}\NormalTok{(freq\_data, }\AttributeTok{centered\_log\_freq =}\NormalTok{ log10freq }\SpecialCharTok{{-}} \FunctionTok{mean}\NormalTok{(log10freq))}
+
+\NormalTok{centered\_freq\_data}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{\#\# \# A tibble: 12 x 5}
+\NormalTok{\#\#    Word        RT  Freq log10freq centered\_log\_freq}
+\NormalTok{\#\#    \textless{}chr\textgreater{}    \textless{}dbl\textgreater{} \textless{}dbl\textgreater{}     \textless{}dbl\textgreater{}             \textless{}dbl\textgreater{}}
+\NormalTok{\#\#  1 thing     622. 55522     4.74              2.03 }
+\NormalTok{\#\#  2 life      520. 40629     4.61              1.89 }
+\NormalTok{\#\#  3 door      507. 14895     4.17              1.46 }
+\NormalTok{\#\#  4 angel     637.  3992     3.60              0.884}
+\NormalTok{\#\#  5 beer      587.  3850     3.59              0.868}
+\NormalTok{\#\#  6 disgrace  705    409     2.61             {-}0.106}
+\NormalTok{\#\#  7 kitten    611.   241     2.38             {-}0.336}
+\NormalTok{\#\#  8 bloke     794.   238     2.38             {-}0.341}
+\NormalTok{\#\#  9 mocha     725.    66     1.82             {-}0.898}
+\NormalTok{\#\# 10 gnome     810.    32     1.51             {-}1.21 }
+\NormalTok{\#\# 11 nihilism  764.     4     0.602            {-}2.12 }
+\NormalTok{\#\# 12 puffball  878.     4     0.602            {-}2.12}
+\end{Highlighting}
+\end{Shaded}
+
+We can see that the centered data has smaller values compared to the log frequencies. We also observe that there are negative values. What does a negative value mean? How can the frequency of a word be negative? In this case, the negative value is relative to the mean. Thus, it means that it is less than the mean (but still above 0).
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\FunctionTok{ggplot}\NormalTok{(centered\_freq\_data, }\FunctionTok{aes}\NormalTok{(}\AttributeTok{x=}\NormalTok{centered\_log\_freq, }\AttributeTok{y=}\NormalTok{RT)) }\SpecialCharTok{+}
+  \FunctionTok{scale\_x\_continuous}\NormalTok{(}\AttributeTok{limits =} \FunctionTok{c}\NormalTok{(}\SpecialCharTok{{-}}\DecValTok{3}\NormalTok{,}\DecValTok{3}\NormalTok{), }\AttributeTok{n.breaks=}\DecValTok{6}\NormalTok{) }\SpecialCharTok{+}
+  \FunctionTok{geom\_text\_repel}\NormalTok{(}\FunctionTok{aes}\NormalTok{(}\AttributeTok{label =}\NormalTok{ Word)) }\SpecialCharTok{+}
+  \FunctionTok{geom\_point}\NormalTok{()}\SpecialCharTok{+}
+  \FunctionTok{geom\_smooth}\NormalTok{(}\AttributeTok{method=}\StringTok{"lm"}\NormalTok{,}\AttributeTok{se=}\NormalTok{F, }\AttributeTok{fullrange=}\ConstantTok{TRUE}\NormalTok{)}\SpecialCharTok{+}
+  \FunctionTok{geom\_vline}\NormalTok{(}\AttributeTok{xintercept =} \DecValTok{0}\NormalTok{, }\AttributeTok{linetype =} \StringTok{"dashed"}\NormalTok{)}\SpecialCharTok{+}
+  \FunctionTok{geom\_label}\NormalTok{(}\AttributeTok{data=}\ConstantTok{NULL}\NormalTok{, }\FunctionTok{aes}\NormalTok{(}\AttributeTok{x=}\FunctionTok{mean}\NormalTok{(centered\_log\_freq), }\AttributeTok{y=} \DecValTok{675}\NormalTok{, }\AttributeTok{label=}\StringTok{"680"}\NormalTok{))}
+\end{Highlighting}
+\end{Shaded}
+
+\includegraphics{main_files/figure-latex/unnamed-chunk-227-1.pdf}
+
+Let us take a look at the intercept and slope values of the two models as well as their \textbf{R2} values to see if centering has any effect on the model and its interpretation.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{\#\# \# A tibble: 2 x 2}
+\NormalTok{\#\#   names                   x}
+\NormalTok{\#\#   \textless{}chr\textgreater{}               \textless{}dbl\textgreater{}}
+\NormalTok{\#\# 1 (Intercept)         871. }
+\NormalTok{\#\# 2 freq\_data$log10freq {-}70.3}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{\#\# \# A tibble: 2 x 2}
+\NormalTok{\#\#   names                                    x}
+\NormalTok{\#\#   \textless{}chr\textgreater{}                                \textless{}dbl\textgreater{}}
+\NormalTok{\#\# 1 (Intercept)                          680. }
+\NormalTok{\#\# 2 centered\_freq\_data$centered\_log\_freq {-}70.3}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{\#\# [1] 0.7373698}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{\#\# [1] 0.7373698}
+\end{Highlighting}
+\end{Shaded}
+
+You can see that both the slope and the \textbf{R2} values remain unchanged. This shows that the model is remaining the same in all the crucial aspects except that it's now treating its 0 point as the mean. This is more meaningful for most measurements. In addition, centering helps interpreting the coefficients especially when multiple predictors interact (to be discussed later).
+
+\subsection{Standardizing}\label{standardizing}
+
+The second type of linear transformation that is very common is \textbf{standardizing} a.k.a. \textbf{z-scoring}. Standardizing also helps identifying a \textbf{standard scale} that helps us define a metric in terms of the sample mean and standard deviation. This is a little counter-intuitive but helps a lot especially when we are interpreting models with multiple predictor variables.
+
+Imagine that you have your taxi data set with the fare and distance variables. One very basic question you have to answer is what metric to use to report the distance. Should you use kilometers, miles, yards, meters, etc. Now, further imagine that you're comparing two data sets with different reported distance measures (e.g.~mile vs km). This is actually a relatively simple problem as you can transform miles to kms and vice versa. However, what if you are trying to measure the relative impact of distance and the number of bridges you pass. These are two different variables with two different measurement units. We cannot directly compare kilometers with the number of bridges. They're not on the same scale. Standardizing helps us make such comparisons (sometimes).
+
+To standardize a variable, we divide the centered values by the standard deviation of the (sample) values.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{centered\_freq\_data }\OtherTok{\textless{}{-}} \FunctionTok{mutate}\NormalTok{(centered\_freq\_data, }\AttributeTok{z\_log\_freq =}\NormalTok{ centered\_log\_freq}\SpecialCharTok{/}\FunctionTok{sd}\NormalTok{(log10freq))}
+
+\NormalTok{centered\_freq\_data}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{\#\# \# A tibble: 12 x 6}
+\NormalTok{\#\#    Word        RT  Freq log10freq centered\_log\_freq z\_log\_freq}
+\NormalTok{\#\#    \textless{}chr\textgreater{}    \textless{}dbl\textgreater{} \textless{}dbl\textgreater{}     \textless{}dbl\textgreater{}             \textless{}dbl\textgreater{}      \textless{}dbl\textgreater{}}
+\NormalTok{\#\#  1 thing     622. 55522     4.74              2.03      1.41  }
+\NormalTok{\#\#  2 life      520. 40629     4.61              1.89      1.31  }
+\NormalTok{\#\#  3 door      507. 14895     4.17              1.46      1.01  }
+\NormalTok{\#\#  4 angel     637.  3992     3.60              0.884     0.614 }
+\NormalTok{\#\#  5 beer      587.  3850     3.59              0.868     0.603 }
+\NormalTok{\#\#  6 disgrace  705    409     2.61             {-}0.106    {-}0.0736}
+\NormalTok{\#\#  7 kitten    611.   241     2.38             {-}0.336    {-}0.233 }
+\NormalTok{\#\#  8 bloke     794.   238     2.38             {-}0.341    {-}0.237 }
+\NormalTok{\#\#  9 mocha     725.    66     1.82             {-}0.898    {-}0.624 }
+\NormalTok{\#\# 10 gnome     810.    32     1.51             {-}1.21     {-}0.842 }
+\NormalTok{\#\# 11 nihilism  764.     4     0.602            {-}2.12     {-}1.47  }
+\NormalTok{\#\# 12 puffball  878.     4     0.602            {-}2.12     {-}1.47}
+\end{Highlighting}
+\end{Shaded}
+
+Let us plot a histogram of z scores to see what they look like.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\FunctionTok{ggplot}\NormalTok{(centered\_freq\_data, }\FunctionTok{aes}\NormalTok{(z\_log\_freq)) }\SpecialCharTok{+}
+    \FunctionTok{scale\_x\_continuous}\NormalTok{(}\AttributeTok{limits =} \FunctionTok{c}\NormalTok{(}\SpecialCharTok{{-}}\DecValTok{3}\NormalTok{,}\DecValTok{3}\NormalTok{), }\AttributeTok{n.breaks=}\DecValTok{6}\NormalTok{)}\SpecialCharTok{+}
+        \FunctionTok{geom\_histogram}\NormalTok{(}\AttributeTok{binwidth=}\FloatTok{0.1}\NormalTok{,}
+                       \AttributeTok{color =} \StringTok{\textquotesingle{}black\textquotesingle{}}\NormalTok{,}
+                       \AttributeTok{fill =} \StringTok{\textquotesingle{}lightblue\textquotesingle{}}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## Warning: Removed 2 rows containing missing values (`geom_bar()`).
+\end{verbatim}
+
+\includegraphics{main_files/figure-latex/unnamed-chunk-230-1.pdf}
+
+\section{Scaling and Standardizing in R}\label{scaling-and-standardizing-in-r}
+
+In the previous sections, we calculated the centered values and the standardized values by hand. R has a dedicated function \texttt{scale()} which does both.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\FunctionTok{library}\NormalTok{(tidyverse)}
+\NormalTok{cab\_fares }\OtherTok{\textless{}{-}} \FunctionTok{read\_csv}\NormalTok{(}\StringTok{\textquotesingle{}data/cab\_fares.csv\textquotesingle{}}\NormalTok{)}
+\NormalTok{cab\_fares}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{\#\# \# A tibble: 1,000 x 3}
+\NormalTok{\#\#    distance\_km n\_bridges taxi\_fare}
+\NormalTok{\#\#          \textless{}dbl\textgreater{}     \textless{}dbl\textgreater{}     \textless{}dbl\textgreater{}}
+\NormalTok{\#\#  1          20         3     180. }
+\NormalTok{\#\#  2          10        10     202. }
+\NormalTok{\#\#  3          15         4     158. }
+\NormalTok{\#\#  4          19         5     196. }
+\NormalTok{\#\#  5          18         1     137. }
+\NormalTok{\#\#  6          16         7     201. }
+\NormalTok{\#\#  7          14         8     209. }
+\NormalTok{\#\#  8          18         8     226. }
+\NormalTok{\#\#  9           5         2      79.6}
+\NormalTok{\#\# 10           9         2      94.2}
+\NormalTok{\#\# \# i 990 more rows}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\CommentTok{\# only centering}
+\NormalTok{cab\_fares }\OtherTok{\textless{}{-}} \FunctionTok{mutate}\NormalTok{(cab\_fares, }\AttributeTok{distance\_c =} \FunctionTok{scale}\NormalTok{(distance\_km, }\AttributeTok{scale =} \ConstantTok{FALSE}\NormalTok{))}
+
+\CommentTok{\# centering and standardizing}
+\NormalTok{cab\_fares }\OtherTok{\textless{}{-}} \FunctionTok{mutate}\NormalTok{(cab\_fares, }\AttributeTok{distance\_c\_z =} \FunctionTok{scale}\NormalTok{(distance\_km))}
+
+\CommentTok{\#printing the dataframe}
+\NormalTok{cab\_fares}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{\#\# \# A tibble: 1,000 x 5}
+\NormalTok{\#\#    distance\_km n\_bridges taxi\_fare distance\_c[,1] distance\_c\_z[,1]}
+\NormalTok{\#\#          \textless{}dbl\textgreater{}     \textless{}dbl\textgreater{}     \textless{}dbl\textgreater{}          \textless{}dbl\textgreater{}            \textless{}dbl\textgreater{}}
+\NormalTok{\#\#  1          20         3     180.            8.39            1.61 }
+\NormalTok{\#\#  2          10        10     202.           {-}1.61           {-}0.309}
+\NormalTok{\#\#  3          15         4     158.            3.39            0.651}
+\NormalTok{\#\#  4          19         5     196.            7.39            1.42 }
+\NormalTok{\#\#  5          18         1     137.            6.39            1.23 }
+\NormalTok{\#\#  6          16         7     201.            4.39            0.843}
+\NormalTok{\#\#  7          14         8     209.            2.39            0.459}
+\NormalTok{\#\#  8          18         8     226.            6.39            1.23 }
+\NormalTok{\#\#  9           5         2      79.6          {-}6.61           {-}1.27 }
+\NormalTok{\#\# 10           9         2      94.2          {-}2.61           {-}0.501}
+\NormalTok{\#\# \# i 990 more rows}
+\end{Highlighting}
+\end{Shaded}
+
+Let us plot a histogram of the raw, centered and the z\_scored data.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\FunctionTok{library}\NormalTok{(gridExtra)}
+\FunctionTok{ggplot}\NormalTok{(cab\_fares, }\FunctionTok{aes}\NormalTok{(distance\_km)) }\SpecialCharTok{+}
+        \FunctionTok{scale\_x\_continuous}\NormalTok{(}\AttributeTok{limits =} \FunctionTok{c}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{25}\NormalTok{), }\AttributeTok{n.breaks=}\DecValTok{10}\NormalTok{)}\SpecialCharTok{+}
+        \FunctionTok{geom\_histogram}\NormalTok{(}\AttributeTok{binwidth=}\FloatTok{0.3}\NormalTok{,}\AttributeTok{boundary=}\DecValTok{0}\NormalTok{,}
+                       \AttributeTok{color =} \StringTok{\textquotesingle{}black\textquotesingle{}}\NormalTok{,}
+                       \AttributeTok{fill =} \StringTok{\textquotesingle{}lightblue\textquotesingle{}}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## Warning: Removed 1 rows containing missing values (`geom_bar()`).
+\end{verbatim}
+
+\includegraphics{main_files/figure-latex/unnamed-chunk-232-1.pdf}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\FunctionTok{ggplot}\NormalTok{(cab\_fares, }\FunctionTok{aes}\NormalTok{(distance\_c)) }\SpecialCharTok{+}
+        \FunctionTok{scale\_x\_continuous}\NormalTok{(}\AttributeTok{limits =} \FunctionTok{c}\NormalTok{(}\SpecialCharTok{{-}}\DecValTok{10}\NormalTok{, }\DecValTok{10}\NormalTok{), }\AttributeTok{n.breaks=}\DecValTok{10}\NormalTok{)}\SpecialCharTok{+}
+        \FunctionTok{geom\_histogram}\NormalTok{(}\AttributeTok{binwidth=}\FloatTok{0.3}\NormalTok{,}\AttributeTok{boundary=}\DecValTok{0}\NormalTok{,}
+                       \AttributeTok{color =} \StringTok{\textquotesingle{}black\textquotesingle{}}\NormalTok{,}
+                       \AttributeTok{fill =} \StringTok{\textquotesingle{}lightblue\textquotesingle{}}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## Warning: Removed 2 rows containing missing values (`geom_bar()`).
+\end{verbatim}
+
+\includegraphics{main_files/figure-latex/unnamed-chunk-232-2.pdf}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\FunctionTok{ggplot}\NormalTok{(cab\_fares, }\FunctionTok{aes}\NormalTok{(distance\_c\_z)) }\SpecialCharTok{+}
+        \FunctionTok{scale\_x\_continuous}\NormalTok{(}\AttributeTok{limits =} \FunctionTok{c}\NormalTok{(}\SpecialCharTok{{-}}\DecValTok{4}\NormalTok{, }\DecValTok{4}\NormalTok{), }\AttributeTok{n.breaks=}\DecValTok{10}\NormalTok{)}\SpecialCharTok{+}
+        \FunctionTok{geom\_histogram}\NormalTok{(}\AttributeTok{binwidth=}\FloatTok{0.1}\NormalTok{,}\AttributeTok{boundary=}\DecValTok{0}\NormalTok{,}
+                       \AttributeTok{color =} \StringTok{\textquotesingle{}black\textquotesingle{}}\NormalTok{,}
+                       \AttributeTok{fill =} \StringTok{\textquotesingle{}lightblue\textquotesingle{}}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+\includegraphics{main_files/figure-latex/unnamed-chunk-232-3.pdf}
+
+\textbf{Important} A z-score above 3 or below -3 is usually interpreted as an extreme value.
+
+\section{Non-linear Transformations}\label{non-linear-transformations}
+
+\subsection{Logarithms \& Log Transformation}\label{logarithms-log-transformation}
+
+One of the problems we often face in raw data is \textbf{skewness}. Technically, skewness is a measure of asymmetry in the data. In practice, it looks like the bulk of the data is rested on one side of a histogram plot with a long tail on the other side. When the tail of the data extends towards a positive value, data is \textbf{positively skewed}. When the tail extends towards a negative value, we call it \textbf{negatively skewed}.
+
+\begin{figure}
+\centering
+\includegraphics{./img/skewness.jpg}
+\caption{\label{fig:skewness}Skewness. Image by \href{https://www.allaboutcircuits.com/technical-articles/understanding-the-normal-distribution-parametric-tests-skewness-and-kurtosis/}{Robert Keim}}
+\end{figure}
+
+Many types of data in linguistics have a positive skew. For example, frequency data is highly skewed. Let us take a look at a frequency data for 50K words from Turkish. (I got this data from some corpus but I don't remember where. Apologies for not being able to provide credit.)
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{turkish\_freq }\OtherTok{\textless{}{-}} \FunctionTok{read\_csv}\NormalTok{(}\StringTok{"data/tr\_50k\_freq.csv"}\NormalTok{, }\AttributeTok{col\_names =} \FunctionTok{c}\NormalTok{(}\StringTok{"word"}\NormalTok{, }\StringTok{"frequency"}\NormalTok{))}
+
+\NormalTok{turkish\_freq}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{\#\# \# A tibble: 50,000 x 2}
+\NormalTok{\#\#    word  frequency}
+\NormalTok{\#\#    \textless{}chr\textgreater{}     \textless{}dbl\textgreater{}}
+\NormalTok{\#\#  1 bir     6034903}
+\NormalTok{\#\#  2 bu      3529532}
+\NormalTok{\#\#  3 ne      2550646}
+\NormalTok{\#\#  4 ve      2544175}
+\NormalTok{\#\#  5 için    1795506}
+\NormalTok{\#\#  6 mi      1713472}
+\NormalTok{\#\#  7 de      1647867}
+\NormalTok{\#\#  8 o       1639226}
+\NormalTok{\#\#  9 ben     1597395}
+\NormalTok{\#\# 10 çok     1572658}
+\NormalTok{\#\# \# i 49,990 more rows}
+\end{Highlighting}
+\end{Shaded}
+
+Let us now get a histogram to see what the data distribution looks like.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\FunctionTok{ggplot}\NormalTok{(turkish\_freq, }\FunctionTok{aes}\NormalTok{(frequency)) }\SpecialCharTok{+}
+  \FunctionTok{scale\_x\_continuous}\NormalTok{(}\AttributeTok{limits =} \FunctionTok{c}\NormalTok{(}\DecValTok{0100}\NormalTok{, }\DecValTok{10000}\NormalTok{), }\AttributeTok{n.breaks=}\DecValTok{10}\NormalTok{)}\SpecialCharTok{+}
+  \FunctionTok{geom\_histogram}\NormalTok{(}\AttributeTok{bins=}\DecValTok{150}\NormalTok{,}
+                 \AttributeTok{color =} \StringTok{\textquotesingle{}black\textquotesingle{}}\NormalTok{,}
+                 \AttributeTok{fill =} \StringTok{\textquotesingle{}lightblue\textquotesingle{}}\NormalTok{)}\SpecialCharTok{+}
+  \FunctionTok{geom\_vline}\NormalTok{(}\AttributeTok{xintercept =} \FunctionTok{mean}\NormalTok{(turkish\_freq}\SpecialCharTok{$}\NormalTok{frequency), }\AttributeTok{linetype=}\StringTok{"dashed"}\NormalTok{ )}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## Warning: Removed 2288 rows containing non-finite values (`stat_bin()`).
+\end{verbatim}
+
+\begin{verbatim}
+## Warning: Removed 2 rows containing missing values (`geom_bar()`).
+\end{verbatim}
+
+\includegraphics{main_files/figure-latex/unnamed-chunk-234-1.pdf}
+
+It looks like most of the words are quite infrequent and a handful of words are very frequent. In fact, word frequencies are skewed in a very interesting way and they have a special distribution name called \textbf{Zipfian} distribution named after George Kingsley Zipf. But we're not interested in that for now.
+
+The important point to notice is where the mean is in this distribution. The mean is shown with the dashed line and it does not in any way reflect the majority of the data. What is more important is that when the data is skewed, its linear modeling will usually result in \textbf{residuals that are not normal}. If the residuals are not normal, then the model will lose its validity. It is important that you notice what matters is the \textbf{normality of the residuals} not the normality of the data. Non-normal data is still fine for liner models as long as the residuals are normal.
+
+\textbf{So, what are logarithms and how do they help?}
+
+Logarithms are inverses of exponentiation.
+
+\begin{longtable}[]{@{}lll@{}}
+\toprule\noalign{}
+\textbf{Logatihm} & \textbf{Exponentiation} & \\
+\midrule\noalign{}
+\endhead
+\bottomrule\noalign{}
+\endlastfoot
+log10(1) =0 & 100 = 1 & \\
+log10(10) =1 & 101 = 10 & \\
+log10(100) =2 & 102 = 100 & \\
+log10(1000) =3 & 103 = 1000 & \\
+log10(10000) =4 & 104 = 10000 & \\
+\end{longtable}
+
+Transforming the data into a log space has a very interesting normalizing impact on your data. It shrinks your data in a non-linear fashion by reducing smaller numbers less than the big numbers. Consider the following example.
+
+\begin{longtable}[]{@{}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.2500}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.2500}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.2500}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.2500}}@{}}
+\toprule\noalign{}
+\begin{minipage}[b]{\linewidth}\raggedright
+\textbf{Raw Value}
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+\textbf{log10 Value}
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+\textbf{Difference}
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+\textbf{\% Shrunk}
+\end{minipage} \\
+\midrule\noalign{}
+\endhead
+\bottomrule\noalign{}
+\endlastfoot
+10 & 1 & 9 & 90\% \\
+100 & 2 & 98 & 98\% \\
+1000 & 3 & 997 & 99.7\% \\
+\end{longtable}
+
+Log transformation keeps some of the relation among data points but removes a decent bit of information as well. When we log transform our data, it becomes \textbf{more normal} and \textbf{less skewed}. It doesn't always become completely normal but it is more normal.
+
+Let us log10 transform the frequency data for Turkish and plot a histogram to see what the data looks like now.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\CommentTok{\# create a new column with the log10 frequency values}
+\NormalTok{turkish\_freq }\OtherTok{\textless{}{-}} \FunctionTok{mutate}\NormalTok{(turkish\_freq, }\AttributeTok{log10freq =} \FunctionTok{log10}\NormalTok{(frequency))}
+
+
+\CommentTok{\#plot a histogram of the log10 frequency values}
+\FunctionTok{ggplot}\NormalTok{(turkish\_freq, }\FunctionTok{aes}\NormalTok{(log10freq)) }\SpecialCharTok{+}
+  \FunctionTok{scale\_x\_continuous}\NormalTok{(}\AttributeTok{limits =} \FunctionTok{c}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{8}\NormalTok{), }\AttributeTok{n.breaks=}\DecValTok{8}\NormalTok{)}\SpecialCharTok{+}
+  \FunctionTok{geom\_histogram}\NormalTok{(}\AttributeTok{bins=}\DecValTok{150}\NormalTok{,}
+                 \AttributeTok{color =} \StringTok{\textquotesingle{}black\textquotesingle{}}\NormalTok{,}
+                 \AttributeTok{fill =} \StringTok{\textquotesingle{}lightblue\textquotesingle{}}\NormalTok{)}\SpecialCharTok{+}
+  \FunctionTok{geom\_vline}\NormalTok{(}\AttributeTok{xintercept =} \FunctionTok{mean}\NormalTok{(turkish\_freq}\SpecialCharTok{$}\NormalTok{log10freq), }\AttributeTok{linetype=}\StringTok{"dashed"}\NormalTok{ )}
+\end{Highlighting}
+\end{Shaded}
+
+\includegraphics{main_files/figure-latex/unnamed-chunk-235-1.pdf}
+
+Notice that the data is still skewed but it's not as bad as before and the mean is closer to the bulk of the data.
+
+\subsection{Linear Regression with Log Transformation}\label{linear-regression-with-log-transformation}
+
+You should run a linear model with and without log transformation to see how the model performs. You can do that by looking at various values.
+
+\begin{itemize}
+\tightlist
+\item
+  SSE
+\item
+  R2
+\item
+  p value
+\end{itemize}
+
+You can also fit a linear regression plot against a point plot to see how they differ. Let us do this for the \texttt{log10ELP\_frequency} data. It's the smaller dataset. You should also consider log10 transforming your dependent variable as well.
 
   \bibliography{book.bib,packages.bib}
 
